windows-commit-works. ec2 to be tested

--- a/serverless-valkey.yaml
+++ b/serverless-valkey.yaml
@@ -20,4 +20,4 @@ Outputs:
   
   ServerlessCacheEndpoint:
     Description: Endpoint for the serverless cache
-    Value: !GetAtt ServerlessCache.EndpointAddress
+    Value: !GetAtt ServerlessCache.Endpoint.Address
